<resources>
    <string name="app_name">BetterWeather</string>
    <string name="main_part_of_day">%1$s, %2$s</string>
    <string name="main_weather_now">%1$s°C</string>
    <string name="main_humidity">Humidity %1$s %%</string>
    <string name="main_pressure">Pressure %1$s mm Hg</string>
    <string name="main_wind">Wind %1$s m/s, %2$s</string>
    <string name="settings_hint_location_name">City, for example Moscow</string>
    <string name="settings_show_additional_info">Display additional information</string>
    <string name="image_weather_now_description">Sunny</string>
    <string name="button_refresh_description">Refresh</string>
    <string name="button_settings_description">Settings</string>
    <string name="main_location_name">Barnaul</string>
    <string name="main_activity_name">The Weather</string>
    <string name="settings_activity_name">Settings</string>
    <string name="pull_to_update">Pull down to refresh</string>
    <string name="on_last_city_delete">The last city can\'t be deleted</string>
    <string name="empty_city_field">Field is empty</string>
</resources>
