<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding_8dp"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    app:cardCornerRadius="@dimen/padding_4dp"
    app:cardBackgroundColor="#E2ECFD">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/location_name"
            style="@style/AppTheme.WHWrapContent"
            android:layout_margin="@dimen/margin_10dp"
            android:text="@string/main_location_name"
            android:textSize="@dimen/text_26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_part_of_day"
            style="@style/AppTheme.WHWrapContent"
            android:text="@string/main_part_of_day"
            android:textSize="@dimen/text_26sp" />

        <!--<fragment
            android:id="@+id/weather_fragment"
            class="com.example.betterweather.WeatherFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </fragment>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/image_weather_now"
                    style="@style/AppTheme.WHWrapContent"
                    android:layout_margin="@dimen/margin_10dp"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/image_weather_now_description"
                    android:src="@drawable/sun" />

                <TextView
                    android:id="@+id/text_weather_now"
                    style="@style/AppTheme.WHWrapContent"
                    android:layout_weight="0.5"
                    android:text="@string/main_weather_now"
                    android:textSize="@dimen/text_60sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/additional_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_humidity_now"
                    style="@style/AppTheme.WHWrapContent.AdditionalInfo"
                    android:text="@string/main_humidity" />

                <TextView
                    android:id="@+id/text_pressure_now"
                    style="@style/AppTheme.WHWrapContent.AdditionalInfo"
                    android:text="@string/main_pressure" />

                <TextView
                    android:id="@+id/text_wind_now"
                    style="@style/AppTheme.WHWrapContent.AdditionalInfo"
                    android:text="@string/main_wind" />
            </LinearLayout>
        </LinearLayout>

        <GridView
            android:id="@+id/grid_view_feature_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:gravity="center"
            android:numColumns="4" />
    </LinearLayout>
</android.support.v7.widget.CardView>