<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/location_name"
            style="@style/AppTheme.WHWrapContent"
            android:layout_margin="@dimen/margin_10dp"
            android:text="@string/main_location_name"
            android:textSize="@dimen/text_26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_part_of_day"
            style="@style/AppTheme.WHWrapContent"
            android:text="@string/main_part_of_day"
            android:textSize="@dimen/text_26sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <fragment
            android:id="@+id/weather_fragment"
            android:name="com.example.betterweather.WeatherFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </fragment>

        <GridView
            android:id="@+id/grid_view_feature_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:gravity="center"
            android:numColumns="4" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/button_refresh"
        style="@style/AppTheme.ImageButtons"
        android:layout_marginStart="@dimen/margin_20dp"
        android:contentDescription="@string/button_refresh_description"
        android:src="@drawable/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:id="@+id/button_settings"
        style="@style/AppTheme.ImageButtons"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:contentDescription="@string/button_settings_description"
        android:src="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>